Two more sections of ssgroups

--- a/my.bib
+++ b/my.bib
@@ -1033,6 +1033,16 @@
 % In 1935 Chevalley could not know this would lead to confusion as Michael was only
 % 1 year old...
 
+@ARTICLE{Chevalley,
+    AUTHOR = {Chevalley, C.},
+     TITLE = {Une d\'emonstration d'un th\'eor\`eme sur les groupes alg\'ebriques},
+   JOURNAL = {J. Math. Pures Appl. (9)},
+    VOLUME = {39},
+      YEAR = {1960},
+     PAGES = {307--317},
+      ISSN = {0021-7824},
+}
+
 @BOOK{chevquad,
     AUTHOR = {Chevalley, Claude},
      TITLE = {The algebraic theory of spinors and {C}lifford algebras},
